--- a/product-preview-card-component-main-master/style.css
+++ b/product-preview-card-component-main-master/style.css
@@ -76,6 +76,9 @@ button{
     border: none;
     font-weight: 700;
     font-size: 16px;
-    border-radius: 10px;
+    border-radius: 10px; 
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 
 }
